# bioformats-rs

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  Makefile  README.md  TODO.md  bioformats_bug.txt  ccc_mapping.toml
audit/: gen_ccc_mapping.py
bench/: BfSubsetBench.java  Cargo.toml  bench_profile_rust.rs  bench_rust.rs  bench_subset_rust.rs  compare_subset.sh
bench/manifests/: leica-xlef-benchmark.paths  perkinelmer-columbus-benchmark.paths  scanr-benchmark-smoke.paths
benches/: read_ome_tiff.rs
bioformats-rs/: Cargo.toml
bioformats-rs/crates/bioformats/: Cargo.toml
bioformats-rs/crates/bioformats-dicom/src/: lib.rs
bioformats-rs/crates/bioformats-gatan/src/: lib.rs
bioformats-rs/crates/bioformats-lsm/src/: lib.rs
bioformats-rs/crates/bioformats-nifti/src/: lib.rs
bioformats-rs/crates/bioformats/src/: registry.rs
examples/: lossless_jpeg_crop.rs  read_fixture_bench.rs
external-fixtures/: README.md
external-fixtures/manifests/: discovered.tsv  fixture_sets.tsv  ome_images_pending.tsv  ome_sample_roots.tsv  openmicroscopy_images.tsv
external-fixtures/scripts/: BioformatsReadBench.java  audit_czi_fixtures.py  audit_mrc_fixtures.py  audit_nd2_fixtures.py  download_ome_samples.py
parity/: BfParityOracle.java
scripts/: README.md  download_biostudies_data.sh  download_ndpi.sh  download_openmicroscopy_images.py  download_stub_samples.sh  download_test_data.sh  download_zarr_sample.sh  gen_zarr_sample.py  prepare_ome_images_conformance.py  run_ome_images_conformance.sh
src/: cache.rs  lib.rs  memoizer.rs  metadata.rs  reader_order.rs  readers.txt  registry.rs  stitcher.rs  wrappers.rs  writer_order.rs  writer_registry.rs
src/common/: codec.rs  compressed.rs  endian.rs  io.rs  mdb.rs  metadata.rs  mod.rs  ole.rs  ome_metadata.rs  path.rs  pixel_type.rs  reader.rs  region.rs  writer.rs  xml.rs
src/formats/: afm.rs  aim.rs  amira.rs  andor.rs  avi.rs  bdv.rs  biorad.rs  bmp.rs  bruker.rs  camera2.rs  cellh5.rs  clinical.rs  czi.rs  dcimg.rs  deltavision.rs  dicom.rs  eps.rs  extended.rs  fake.rs  fits.rs  flex.rs  flim.rs  flim2.rs  gatan.rs  hamamatsu.rs  hcs2.rs  ics.rs  imagic.rs  imaris.rs  imaris_hdf.rs  incell.rs  java_writer.rs  jpeg.rs  khoros.rs  legacy.rs  lei.rs  leica.rs  leica_lms.rs  lif.rs  lim.rs  (+45 more)
src/metakit/: mod.rs
src/ome-metakit/: Cargo.toml
src/ome-metakit/src/: lib.rs
src/ome-metakit/tests/: upstream_fixture.rs
src/tiff/: compression.rs  ifd.rs  jpeg_restart.rs  mod.rs  nikon.rs  parser.rs  reader.rs  writer.rs
tests/: external_fixtures_test.rs  format_tests.rs  integration_test.rs  ivision_xml_metadata_test.rs  java_parity_test.rs  java_writer_parity_test.rs  metadata_tools_test.rs  new_features_test.rs  non_upstream_readers_test.rs  ome_bindata_compression_test.rs  picoquant_ptu_metadata_test.rs  placeholder_readers_test.rs  quicktime_cinepak_test.rs  real_data_test.rs  slidebook7_sldyz_test.rs  slidebook7_yaml_metadata_test.rs  stub_cellworx_test.rs  stub_extended_test.rs  stub_flim2_test.rs  stub_imod_test.rs  stub_misc4_test.rs  stub_misc4b_test.rs  stub_misc_test.rs  tillvision_fragment_inference_test.rs  write_test.rs  xlef_metadata_test.rs  zarr_test.rs
