[package]
name = "bioformats"
version = "0.1.0"
edition = "2021"
description = "Pure Rust reimplementation of Bio-Formats — read/write scientific image formats"
license-file = "LICENSE.txt"
homepage = "https://www.openmicroscopy.org/bio-formats/"
exclude = ["java-bioformats/", "*.jar", "bench/", "old/", "test/", "convo.txt"]

[workspace]
resolver = "2"
exclude = ["bench"]

[dependencies]
thiserror    = "1"
log          = "0.4"
hdf5         = { package = "hdf5-metno", version = "0.12" }
zip          = "2"
flate2       = "1"
weezl        = "0.1"
jpeg-decoder = "0.3"
zstd         = "0.13"
quick-xml    = "0.37"
encoding_rs  = "0.8"
cfb          = "0.10"
byteorder    = "1"
image        = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "gif", "tga", "webp", "pnm", "hdr", "exr", "dds", "ff"] }
jpeg2k       = { version = "0.10", default-features = false, features = ["openjp2"] }
serde         = { version = "1", features = ["derive"] }
bincode       = "1"
jpegxr        = { version = "0.3", optional = true }
openslide-pure-rs = { path = "/home/mahogny/github/claude/openslide-rs", optional = true }

[features]
jpegxr = ["dep:jpegxr"]
openslide = ["dep:openslide-pure-rs"]

[[bin]]
name = "bioformats-convert"
path = "src/bin/bioformats_convert.rs"

[[bench]]
name = "read_ome_tiff"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
