[package]
name = "bioformats"
version = "0.1.4"
edition = "2021"
description = "Pure Rust translation of Bio-Formats — read/write scientific image formats"
license = "GPL-2.0-or-later"
homepage = "https://www.openmicroscopy.org/bio-formats/"
repository = "https://github.com/henriksson-lab/bioformats-rs"
readme = "README.md"
keywords = ["microscopy", "bioformats", "image", "tiff", "ome"]
categories = ["science", "multimedia::images", "parser-implementations"]
include = [
    "/src/**/*.rs",
    "/README.md",
    "/LICENSE.txt",
]

[workspace]
resolver = "2"
members = ["src/ome-metakit"]
exclude = ["bench"]

[dependencies]
thiserror    = "1"
log          = "0.4"
hdf5-pure-rust = "0.3"
zip          = { version = "2", default-features = false, features = ["deflate", "deflate64", "lzma", "aes-crypto", "time"] }
flate2       = "1"
weezl        = "0.1"
jpeg-decoder = "0.3"
zune-jpeg    = "0.5"
zune-core    = "0.5"
zstd-pure-rs = "0.1"
quick-xml    = "0.37"
encoding_rs  = "0.8"
cfb          = "0.10"
byteorder    = "1"
image        = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "gif", "tga", "webp", "pnm", "hdr", "exr", "dds", "ff"] }
jpeg2k       = { version = "0.10", default-features = false, features = ["openjp2"] }
openjp2      = { version = "0.6", optional = true }
serde         = { version = "1", features = ["derive"] }
bincode       = "1"
jpegxr        = { version = "0.3", optional = true }
openslide-pure-rs = { version = "0.1", optional = true }
mdbtools      = { package = "mdbtools-pure-rs", version = "0.1" }
bzip2 = "0.6"
zarrs         = { version = "0.23", features = ["filesystem"] }
serde_json    = "1"
rusqlite      = { version = "0.32", features = ["bundled"], optional = true }

[features]
default = ["jpeg2000-write"]
jpegxr = ["dep:jpegxr"]
openslide = ["dep:openslide-pure-rs"]
jpeg2000-write = ["dep:openjp2"]
# TissueFAXS (.aqproj/.tfcyto) reads SQLite project databases; off by default
# to keep the default build free of the bundled libsqlite3 C dependency.
tissuefaxs = ["dep:rusqlite"]

[[bin]]
name = "bioformats-convert"
path = "src/bin/bioformats_convert.rs"

[[bench]]
name = "read_ome_tiff"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
